--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   google_fonts: ^4.0.4
+  cached_network_image: ^3.2.3
 flutter:
   uses-material-design: true
   assets:
